# actix-playground

./: Cargo.toml  README.md
migrations/2024-04-26-060524_users/: up.sql
src/: main.rs
src/database/: mod.rs  schema.rs
src/database/action/: user.rs
src/database/model/: user.rs
src/form/: user.rs
src/middleware/: user.rs
src/security/: mod.rs
src/template/: error.rs  mod.rs  user.rs
src/templating/: filter.rs  mod.rs
src/translation/: mod.rs
templates/: _base.html  index.html  login.html  profile.html  register.html
templates/error/: 404.html
translations/: messages.en.toml  messages.fr.toml
