[package]
name = "silly"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
rusqlite = "0.29"
log = "0.4.21"
env_logger = "0.11.3"
num_cpus = "1.16.0"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
serde_json = "1.0.116"
askama = "0.12"
actix-web-lab = "0.20"
actix-session = { version = "0.9", features = ["cookie-session"] }
md5 = "0.7.0"
bcrypt = "0.15.1"
tarjama = { git = "https://github.com/azjezz/tarjama", branch = "mb" }

[build-dependencies]
askama = "0.12"
